--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <!--Google Fonts Header Text -->
   
   <style>
-    
+    body{
+      color: FFFDF7; 
+    }
   
   </style>
 </head>
 <body>
+  
+
 
 
 </body>
