--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </div>
 
   <div id="onRightSide">
-    <div id="blackRect"></div> <!-- Rectangle positioned behind the text -->
+    <div id="blackRect"></div> 
     <div id="whiteline"></div>
     <div class="whitetext">
       <h2 style="font-size:75px">I'M</h2>
@@ -129,6 +129,7 @@
       <h2>SOUTH</h2>
       <h2 style="font-size:50px">JRSOUTH@UWATERLOO.CA</h2>
     </div>
+     <img src="portrait.png" alt="self portrait">
   </div>
 </body>
 </html>
