--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       height: 100vh;
       display: flex;
       padding: 20px;
-
     }
     
     h1 {
@@ -106,6 +105,16 @@
       margin-left: 200px; 
       margin-top: 30px; 
     }
+
+  
+    #onRightSide img {
+      position: absolute;
+      z-index: 1;
+      top: 180px;
+      left: 209px;
+      width: 400px; 
+      opacity: 80%
+    }
   
   </style>
 </head>
@@ -121,6 +130,7 @@
   </div>
 
   <div id="onRightSide">
+    <img src="Me.png" alt="self portrait">
     <div id="blackRect"></div> 
     <div id="whiteline"></div>
     <div class="whitetext">
@@ -129,7 +139,6 @@
       <h2>SOUTH</h2>
       <h2 style="font-size:50px">JRSOUTH@UWATERLOO.CA</h2>
     </div>
-     <img src="portrait.png" alt="self portrait">
   </div>
 </body>
 </html>
