--- a/index.html
+++ b/index.html
@@ -54,15 +54,18 @@
       justify-content: flex-start;
     }
     
+  
     #onRightSide {
       width: 50%;
       position: relative; 
       padding: 20px;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: flex-start; 
     }
+    /* justifying content/ flex content https://www.w3schools.com/cssref/css3_pr_justify-content.php */
     
+
     #blackRect {
       width: 550px;
       height: 600px;
