--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       font-size: 300px; 
       font-family: 'League Gothic', sans-serif; 
       margin: 0;
-      line-height: 1; 
+      line-height: 1;
+      letter-spacing: 13; 
     }
     
     h2 {
@@ -77,7 +78,7 @@
     }
     
     #blackline {
-      width: 450px;
+      width: 475px;
       height: 5px;
       background-color: black;
       position: absolute;
