--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       flex-direction: column;
       justify-content: flex-start; 
     }
+    /* justifying content/ flex content https://www.w3schools.com/cssref/css3_pr_justify-content.php */
     
+
     #blackRect {
       width: 550px;
       height: 580px;
@@ -108,6 +110,7 @@
       margin-top: 30px; 
     }
 
+  
     #onRightSide img {
       position: absolute;
       z-index: 1;
@@ -116,51 +119,10 @@
       width: 400px; 
       opacity: 80%
     }
-
-    nav {
-      background-color: #FFFDF7;
-      padding: 10px 0;
-      width: 100%;
-      position: relative;
-      left: 900px
-    }
-
-    nav ul {
-      list-style: none;
-      padding: 0;
-      display: flex;
-      margin: 0;
-      justify-content: center;
-    }
-
-    nav li {
-      margin: 0 20px;
-    }
-
-    nav a {
-      color: black;
-      text-decoration: none;
-      font-family: 'Noto Sans', sans-serif;
-      font-size: 15px;
-      margin: 0; 
-    }
-
-    nav a:hover,
-    nav a:active {
-      color: #808080;
-    }
+  
   </style>
 </head>
 <body>
-  
-  <nav>
-    <ul>
-      <li><a href="/" class="Home"> HOME </a></li>
-      <li><a href="/" class="ILLUSTRATOR"> ILLUSTRATOR </a></li>
-      <li><a href="/" class="PHOTOSHOP"> PHOTOSHOP</a></li>
-      <li><a href="/" class="Other Projects"> OTHER</a></li>
-    </ul> 
-  </nav>
   
   <div id="onLeftSide">
     <div class="blacktext">
@@ -182,6 +144,8 @@
       <h2 style="font-size:45px">JRSOUTH@UWATERLOO.CA</h2>
     </div>
   </div>
-  
 </body>
 </html>
+
+
+
