--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ nav a:active {
             <li><a href="/">HOME</a></li>
             <li><a href="/">ILLUSTRATOR</a></li>
             <li><a href="/">PHOTOSHOP</a></li>
-            <li><a href="/">OTHER PROJECTS</a></li>
+            <li><a href="/">ABOUT ME</a></li>
         </ul>
     </nav>
 </div>
