header and drop shadow

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
       left: 60px;
       top: 60px;
       z-index: 0;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+      
     }
     
     #blackline {
@@ -150,12 +152,13 @@
   <header>
     <nav>
         <ul>
-            <li><a href="/">HOME</a></li>
-            <li><a href="/">ILLUSTRATOR</a></li>
-            <li><a href="/">PHOTOSHOP</a></li>
-            <li><a href="/">ABOUT ME</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/">ILLUSTRATOR</a></li>
+          <li><a href="/">PHOTOSHOP</a></li>
+          <li><a href="/">RECENT PROJECTS</a></li>
+          <li><a href="/">ABOUT ME</a></li>
         </ul>
-    </nav>
+      </nav>
   </header>
 
   <div id="onLeftSide">
