--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <h2 style="font-size:75px">I'M</h2>
       <h2>JENNY</h2>
       <h2>SOUTH</h2>
-      <h2 style="font-size:45px">JRSOUTH@UWATERLOO.CA</h2>
+      <h2 style="font-size:45px"><a href="mailto:someone@example.com">JRSOUTH@UWATERLOO.CA</a></h2>
     </div>
   </div>
 
