--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <h2 style="font-size:75px">I'M</h2>
       <h2>JENNY</h2>
       <h2>SOUTH</h2>
-      <h2 style="font-size:45px"><a href="mailto:jrsouth@uwaterloo.ca">JRSOUTH@UWATERLOO.CA</a></h2>
+      <h2 style="font-size:45px"><a href="mailto:jrsouth@uwaterloo.ca" target="_blank">JRSOUTH@UWATERLOO.CA</a></h2>
     </div>
   </div>
 
