--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <style>
+     * {
+  box-sizing: border-box; 
+}
+    
     body {
       background-color: #FFFDF7; 
       margin: 0;
@@ -50,6 +54,8 @@
       width: 45%;
       float: left;
       position: relative;
+      margin-left: 40px;
+        margin-top:10px
     }
     
     #onRightSide {
@@ -57,6 +63,7 @@
       float: left;
       position: relative; 
       padding: 20px;
+       margin-top:10px
     }
 
     #blackRect {
