--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       width: 45%;
       float: left;
       position: relative;
-      margin-left: 10px;
-        margin-top:10px
+    margin-top: 10px;
     }
     
     #onRightSide {
