--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <li><a href="/">ILLUSTRATOR</a></li>
           <li><a href="/">PHOTOSHOP</a></li>
           <li><a href="/">RECENT PROJECTS</a></li>
-          <li><a href="/">ABOUT ME</a></li>
+          <li><a href="https://jrsouth05.github.io/About-Me-Page/">ABOUT ME</a></li>
         </ul>
       </nav>
   </header>
