--- a/index.html
+++ b/index.html
@@ -118,13 +118,22 @@
       opacity: 0.8;
     }
 
-    a {
-      color: #FFFDF7;
-      text-decoration: none;
+     a:link {
+        color: #FFFDF7; 
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: #757575; 
     }
 
     a:hover {
-      color: #808080;
+        color: #808080; 
+        text-decoration: underline; 
+    }
+
+    a:active {
+        color: #404040; 
     }
 
     header {
